--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ html, body {
   background: #000000;
   color: #00ff66;
   font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 body {
@@ -20,4 +20,5 @@ a {
 
 pre {
   margin: 0;
+  line-height: 1.4;
 }
