--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,19 @@ a {
   color: inherit;
 }
 
+.terminal-link {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.terminal-link:hover,
+.terminal-link:focus-visible {
+  color: #ffffff;
+  background: #000000;
+  outline: 1px solid rgba(0, 204, 0, 0.4);
+  outline-offset: 3px;
+}
+
 pre {
   margin: 0;
   line-height: 1.4;
